// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultNode Node builds the expected component 1`] = `
<p
  dummy="dummyData"
/>
`;

exports[`DefaultNode oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": undefined,
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`DefaultNode slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [],
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`DefaultNode slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
